--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="flex-container">
             <div class="conteudo">
-                <img src="images/illustration-hero.svg" alt="">
+                <img class="hero" src="images/illustration-hero.svg" alt="">
                 <div class="titulo">
                     Order Summary
                 </div>
@@ -24,7 +24,7 @@
                     anywhere you like!
                 </div>
                 <div class="plano-container">
-                    <img class="icon" src="images/icon-music.svg" alt="">
+                    <img src="images/icon-music.svg" alt="">
 
                     <a href="https://www.homehost.com.br/">Change</a>
 
